--- a/DotNetNuke.Authentication.ActiveDirectory.vbproj
+++ b/DotNetNuke.Authentication.ActiveDirectory.vbproj
@@ -169,6 +169,13 @@
     <None Include="App_LocalResources\Settings.ascx.resx" />
     <None Include="BuildScripts\ModulePackage.targets" />
     <None Include="BuildScripts\MSBuild.Community.Tasks.Targets" />
+    <Content Include="web.config" />
+    <None Include="web.Debug.config">
+      <DependentUpon>web.config</DependentUpon>
+    </None>
+    <None Include="web.Release.config">
+      <DependentUpon>web.config</DependentUpon>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Documentation\Documentation.css" />
